# managed-infra

./: .cursorignore  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/infra-backup/: SKILL.md
.agents/skills/infra-deploy/: SKILL.md
.agents/skills/infra-fleet/: SKILL.md
.agents/skills/infra-reboot/: SKILL.md
.agents/skills/infra-restore/: SKILL.md
.agents/skills/infra-status/: SKILL.md
.cursor/commands/: infra-backup.md  infra-deploy.md  infra-reboot.md  infra-restore.md  infra-status.md
.cursor/rules/: templates-only.mdc
.cursor/skills/infra-deploy/: SKILL.md
ansible/: ansible.cfg  requirements.yml
ansible/inventory/: hosts.yml
ansible/inventory/group_vars/: all.yml  linux_hosts.yml  linux_hosts_standby.yml
ansible/inventory/host_vars/: edge-node-1.yml  edge-node-2.yml  edge-node-3.yml
ansible/playbooks/: docker-status.yml  edge-stack-backup.yml  edge-stack-restore.yml  site.yml
ansible/roles/base_packages/defaults/: main.yml
ansible/roles/base_packages/tasks/: main.yml
ansible/roles/common/tasks/: main.yml  reboot.yml
ansible/roles/docker/tasks/: main.yml  reset_connection.yml
ansible/roles/edge_stack/defaults/: main.yml
ansible/roles/samba/tasks/: main.yml
docker/: README.md  compose-grafana.yml  compose-mosquitto.yml  compose-node-red.yml  compose-portainer.yml  compose-postgresql.yml  compose.yml  env.example
docs/: ansible.md  ssh-keys-mac-to-linux.md
tests/: __init__.py  contract_helpers.py  test_compose_alignment.py  test_host_vars_compose.py  test_repo_layout.py  test_restore_edge_stack.py
(+10 files in other folders)
